--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,11 @@ version = "0.1.0"
 byteorder = "0.4.2"
 log = "0.4.5"
 simplelog = "0.5.3"
+
+[features]
+default = ["glfb"]
+glfb = ["mini_gl_fb"]
+
+[dependencies.mini_gl_fb]
+version = "0.6.0"
+optional = true
