--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,19 @@ version = "0.1.0"
 
 [dependencies]
 byteorder = "0.4.2"
+console_error_panic_hook = "0.1.5"
 log = "0.4.5"
 simplelog = "0.5.3"
-
-[features]
-default = ["glfb"]
-glfb = ["mini_gl_fb"]
+wasm-bindgen = "0.2.27"
 
 [dependencies.mini_gl_fb]
-version = "0.6.0"
 optional = true
+version = "0.6.0"
+
+[features]
+default = []
+glfb = ["mini_gl_fb"]
+
+[lib]
+crate-type = ["cdylib"]
+path = "src/lib.rs"
