--- a/pkg/package.json
+++ b/pkg/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gameboy",
   "collaborators": [
-    "guest"
+    "Antti Keränen <detegr@gmail.com>"
   ],
   "version": "0.1.0",
   "files": [
