--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,28 +3,37 @@ authors = ["Antti Keränen <detegr@gmail.com>"]
 name = "gameboy"
 version = "0.1.0"
 
+[[bin]]
+name = "gameboy"
+path = "src/bin.rs"
+
 [dependencies]
 byteorder = "0.4.2"
 console_error_panic_hook = "0.1.5"
 log = "0.4.5"
 simplelog = "0.5.3"
 
-[target.'cfg(not(target_os = "unknown"))'.dependencies.mini_gl_fb]
-optional = true
-version = "0.6.0"
-
 [features]
 default = ["glfb"]
 glfb = ["mini_gl_fb"]
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+name = "gameboy"
+path = "src/lib.rs"
+
+[target]
+
+[target."cfg(not(target_os = \"unknown\"))"]
+
+[target."cfg(not(target_os = \"unknown\"))".dependencies]
+
+[target."cfg(not(target_os = \"unknown\"))".dependencies.mini_gl_fb]
+optional = true
+version = "0.6.0"
+
+[target.wasm32-unknown-unknown]
+
 [target.wasm32-unknown-unknown.dependencies]
 wasm-bindgen = "0.2.27"
-
-[[bin]]
-name = "gameboy"
-path = "src/bin.rs"
-
-[lib]
-name = "gameboy"
-crate-type = ["cdylib", "rlib"]
-path = "src/lib.rs"
+wasm-logger = "0.1.0"
